# treatviewers-backend

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  lib.rs  main.rs
src/config/: api_routes.rs  app_routes.rs  app_state.rs  auth_middleware.rs  database.rs  database_session.rs  error_handler.rs  extractor.rs  jwt.rs  logging.rs  mod.rs  protected_routes.rs  swagger.rs
src/external_api/: fb_me.rs  google_jwks.rs  mod.rs  sms.rs
src/handlers/: default_route.rs  extra_test_routes.rs  global_404.rs  mod.rs  ping.rs
src/handlers/wallet/: add_bal.rs  add_bal_end_req.rs  extension.rs  mod.rs
src/helpers/: mod.rs  wallet.rs
src/models/: jwt_claims.rs  mod.rs  otp.rs  request.rs  response.rs  user.rs  wallet.rs
src/utils/: impl_validate_extra.rs  import_double.rs  misc.rs  mod.rs  test_helper.rs  token.rs  unprotected_route.rs
src/validators/: add_bal.rs  custom_validator.rs  mod.rs  validate_extra.rs
