[package]
name = "treatviewers_backend"
description = "Backend API for Trailsbuddy app"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sibaprasad Maiti<sibu.it13@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.73"
aws-config = "0.56.0"
aws-sdk-s3 = "0.29.0"
axum = { version = "0.6.20", features = ["headers", "multipart"] }
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
mongodb = "2.6.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.3", features = ["timeout", "cors", "compression-gzip", "trace", "set-header", "normalize-path", "util", "map-response-body", "catch-panic"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = { version = "3.4.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
hyper = "0.14.27"
mockall = "0.11.4"
mockall_double = "0.3.0"
